--- a/index.html
+++ b/index.html
@@ -1286,8 +1286,8 @@
                 <div class="social-links">
                   <!-- <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
                   <a href="#" class="facebook"><i class="icofont-facebook"></i></a> -->
-                  <a href="#" class="https://www.instagram.com/vez.tech/"><i class="icofont-instagram"></i></a>
-                  <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+                  <a href="https://www.instagram.com/vez.tech/" class="instagram"><i class="icofont-instagram"></i></a>
+                  <a href="https://www.linkedin.com/company/veztech/" class="linkedin"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
             </div>
